# dl_course_design

./: .gitignore  console.txt  encoding_rule.md  main.py  predict_plate.py  pyproject.toml  yolo.py
