[project]
name = "dl-course-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.13.0.92",
    "paddlepaddle>=3.3.1",
    "paddlepaddle-gpu>=3.3.1",
    "torch>=2.1.2",
    "torchvision>=0.20.1",
    "ultralytics>=8.4.75",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
paddlepaddle-gpu = { index = "paddlepaddle-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "paddlepaddle-cu126"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true
